# ML_and_DM

./: .quartoignore  README.md  _quarto.yml  index.qmd  pyproject.toml  pytania-egzaminacyjne.qmd  references.bib  test.ipynb
chapters/: 01-wprowadzenie.qmd  02-przygotowanie-danych.qmd  03-klasyfikacja-liniowa.qmd  04-drzewa-zespoly.qmd  05-bayes.qmd  06-knn.qmd  07-splajny-gam.qmd  08-svm.qmd  09-dalsze-zagadnienia.qmd  10-podsumowanie.qmd  data.csv  data.json  data.xlsx
chapters/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
chapters/catboost_info/learn/: events.out.tfevents
docs/: index.html  search.json
docs/chapters/: 01-wprowadzenie.html  02-przygotowanie-danych.html  03-klasyfikacja-liniowa.html  04-drzewa-zespoly.html  05-bayes.html  06-knn.html  07-splajny-gam.html  08-svm.html  09-dalsze-zagadnienia.html  10-podsumowanie.html  reference.html
docs/site_libs/bootstrap/: bootstrap-666135433cace59c5973edf2e2f39c5b.min.css  bootstrap-dark-c84f4249ebe5bde6a406a74c1334a68b.min.css
