[project]
name = "ml-and-dm-book"
version = "0.1.0"
description = "Quarto book for machine learning and data mining course"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "seaborn>=0.13",
  "statsmodels>=0.14",
]
