[project]
name = "ml-and-dm-book"
version = "0.1.0"
description = "Quarto book for machine learning and data mining course"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "catboost>=1.2",
  "datasets>=4.4.2",
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "lightgbm>=4.6.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "openpyxl>=3.1.5",
  "pandas>=2.2",
  "pygam>=0.12.0",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "seaborn>=0.13",
  "statsmodels>=0.14",
  "xgboost>=2.0",
]
